--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "turborepo-template",
+  "name": "iamhoonse-ecosystem",
   "private": true,
   "scripts": {
     "build": "turbo run build",
