--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,20 +14,20 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@repo/browser-utils": "workspace:*",
-    "@repo/http-clients": "workspace:*",
-    "@repo/node-utils": "workspace:*",
-    "@repo/react-ui": "workspace:*",
-    "@repo/react-utils": "workspace:*",
-    "@repo/ui": "workspace:*",
+    "@iamhoonse-js/browser-utils": "workspace:*",
+    "@iamhoonse-js/http-clients": "workspace:*",
+    "@iamhoonse-js/node-utils": "workspace:*",
+    "@iamhoonse-js/react-ui": "workspace:*",
+    "@iamhoonse-js/react-utils": "workspace:*",
+    "@iamhoonse-js/ui": "workspace:*",
     "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "@repo/vitest-config": "workspace:*",
+    "@iamhoonse-js/eslint-config": "workspace:*",
+    "@iamhoonse-js/typescript-config": "workspace:*",
+    "@iamhoonse-js/vitest-config": "workspace:*",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
