--- a/apps/frontend-workshop/package.json
+++ b/apps/frontend-workshop/package.json
@@ -13,14 +13,14 @@
     "test:storybook": "test-storybook"
   },
   "dependencies": {
-    "@repo/react-ui": "workspace:*",
+    "@iamhoonse-js/react-ui": "workspace:*",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
     "@eslint/js": "^9.21.0",
-    "@repo/eslint-config": "workspace:*",
+    "@iamhoonse-js/eslint-config": "workspace:*",
     "@storybook/addon-a11y": "^8.6.12",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/blocks": "^8.6.12",
