--- a/packages/http-clients/package.json
+++ b/packages/http-clients/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/http-clients",
+  "name": "@iamhoonse-js/http-clients",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -31,9 +31,9 @@
     "dist"
   ],
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/helpers": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@iamhoonse-js/eslint-config": "workspace:*",
+    "@iamhoonse-js/helpers": "workspace:*",
+    "@iamhoonse-js/typescript-config": "workspace:*",
     "@types/node": "^22.13.10",
     "eslint": "^9.23.0",
     "typescript": "5.8.2",
