--- a/shared/helpers/package.json
+++ b/shared/helpers/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/helpers",
+  "name": "@iamhoonse-js/helpers",
   "version": "0.0.0",
   "private": true,
   "exports": {
@@ -15,8 +15,8 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@iamhoonse-js/eslint-config": "workspace:*",
+    "@iamhoonse-js/typescript-config": "workspace:*",
     "@types/node": "^22.13.10",
     "eslint": "^9.23.0",
     "typescript": "5.8.2"
