--- a/tools/cli/package.json
+++ b/tools/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/cli",
+  "name": "@iamhoonse-js/cli",
   "private": true,
   "version": "0.0.0",
   "bin": {
@@ -18,9 +18,9 @@
     "coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "@repo/vitest-config": "workspace:*",
+    "@iamhoonse-js/eslint-config": "workspace:*",
+    "@iamhoonse-js/typescript-config": "workspace:*",
+    "@iamhoonse-js/vitest-config": "workspace:*",
     "@types/figlet": "^1.7.0",
     "@types/node": "^22.13.10",
     "@vitest/coverage-v8": "^3.1.1",
