--- a/tools/playwright-web/package.json
+++ b/tools/playwright-web/package.json
@@ -12,9 +12,9 @@
   },
   "devDependencies": {
     "web": "workspace:*",
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "@repo/playwright-config": "workspace:*",
+    "@iamhoonse-js/eslint-config": "workspace:*",
+    "@iamhoonse-js/typescript-config": "workspace:*",
+    "@iamhoonse-js/playwright-config": "workspace:*",
     "eslint": "^9.23.0",
     "@types/node": "^22.13.10"
   },
