--- a/turbo.json
+++ b/turbo.json
@@ -7,8 +7,8 @@
       "inputs": ["$TURBO_DEFAULT$", ".env*", "!**/*.stories.{tsx,jsx,mdx}"],
       "outputs": [".next/**", "!.next/cache/**", "dist/**", "storybook-static/**"]
     },
-    "@repo/react-utils#build": {
-      "dependsOn": ["@repo/browser-utils#build"]
+    "@iamhoonse-js/react-utils#build": {
+      "dependsOn": ["@iamhoonse-js/browser-utils#build"]
     },
     "build:storybook": {},
     "lint": {
@@ -22,7 +22,7 @@
       "persistent": true
     },
     "test": {
-      "dependsOn": ["^test", "@repo/vitest-config#build"],
+      "dependsOn": ["^test", "@iamhoonse-js/vitest-config#build"],
       "outputs": [
         "coverage.json",
         "apps/*/coverage.json",
