feat: portfolio 앱 클라이언트에서 msw 를 사용할 수 있도록 스크립트 복사 경로에 추가

--- a/packages/browser-utils/package.json
+++ b/packages/browser-utils/package.json
@@ -77,7 +77,8 @@
   },
   "msw": {
     "workerDirectory": [
-      "../../apps/web/public"
+      "../../apps/web/public",
+      "../../apps/portfolio/public"
     ]
   }
 }
