--- a/docker-compose.gha.yaml
+++ b/docker-compose.gha.yaml
@@ -23,6 +23,22 @@ services:
     networks:
       - test_network
 
+
+  # The portfolio service is built from the Dockerfile located in the ./apps/portfolio directory
+  portfolio:
+    image: ghcr.io/${REPOSITORY_OWNER}/${REPOSITORY_NAME}/portfolio:cache
+    build:
+      context: .
+      dockerfile: ./apps/portfolio/Dockerfile
+      cache_from:
+        - type=registry,ref=ghcr.io/${REPOSITORY_OWNER}/${REPOSITORY_NAME}/portfolio:cache
+      cache_to:
+        - type=registry,ref=ghcr.io/${REPOSITORY_OWNER}/${REPOSITORY_NAME}/portfolio:cache,mode=max
+    ports:
+      - 3000:3000
+    networks:
+      - test_network
+
   # The Playwright service is built from the Dockerfile located in the ./tools/playwright directory
   playwright-web:
     image: ghcr.io/${REPOSITORY_OWNER}/${REPOSITORY_NAME}/playwright-web:cache
@@ -37,6 +53,7 @@ services:
       - test_network
     depends_on:
       - web
+      - portfolio
     environment:
       CI: true
 
