test: lighthouse-ci 도구에 portfolio 앱에 대한 e2e 테스트 환경 설정 추가

--- a/docker-compose.gha.yaml
+++ b/docker-compose.gha.yaml
@@ -71,6 +71,7 @@ services:
       - test_network
     depends_on:
       - web
+      - portfolio
     environment:
       CI: true
       WEB_BASE_URL: http://web:3000
