build(deps): portfolio 앱에서 @storybook/react 의존성 추가

--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -28,6 +28,7 @@
     "@iamhoonse-js/eslint-config": "workspace:*",
     "@iamhoonse-js/typescript-config": "workspace:*",
     "@iamhoonse-js/vitest-config": "workspace:*",
+    "@storybook/react": "^8.6.12",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
