--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "next": "^15.2.4",
+    "nextra": "^4.2.17",
+    "nextra-theme-docs": "^4.2.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
