--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -24,6 +24,7 @@
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "eslint": "^9.23.0",
+    "pagefind": "^1.3.0",
     "typescript": "5.8.2"
   },
   "engines": {
