--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,6 +56,7 @@ jobs:
             apps/*/.next
             !apps/*/.next/cache
             apps/*/storybook-static
+            apps/*/out
             packages/*/dist
             configs/*/dist
             shared/*/dist
