ci: publish-github-pages.yml 워크플로우를 main 브랜치에 대해서만 실행하도록 변경

--- a/.github/workflows/publish-github-pages.yml
+++ b/.github/workflows/publish-github-pages.yml
@@ -5,7 +5,7 @@ on:
   push:
     # Runs on pushes targeting the default branch
     branches:
-      - '*' # fixme: for testing purposes, change to 'main' or your default branch
+      - main
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
