ci: publish-github-pages.yml 워크플로우에서 빌드 명령어 실행 결과 확인용 명령어 추가

--- a/.github/workflows/publish-github-pages.yml
+++ b/.github/workflows/publish-github-pages.yml
@@ -80,7 +80,9 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build docs app
-        run: pnpm run build --filter=docs
+        run: |
+          pnpm run build --filter=docs
+          ls -ahl ./apps/docs/out
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
