Revert "ci: publish-github-pages.yml 워크플로우에서 빌드 명령어 실행 결과 확인용 명령어 추가"
This reverts commit fd39ed099541de8de67e2c4230462a6e7ca2659c.

--- a/.github/workflows/publish-github-pages.yml
+++ b/.github/workflows/publish-github-pages.yml
@@ -80,9 +80,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build docs app
-        run: |
-          pnpm run build --filter=docs
-          ls -ahl ./apps/docs/out
+        run: pnpm run build --filter=docs
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
