--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,8 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*", "!**/*.stories.{tsx,jsx,mdx}"],
-      "outputs": [".next/**", "!.next/cache/**", "dist/**", "storybook-static/**", "out/**"]
+      "outputs": [".next/**", "!.next/cache/**", "dist/**", "storybook-static/**", "out/**"],
+      "passThroughEnv": ["GISCUS_REPO", "GISCUS_REPO_ID", "GISCUS_DISCUSSION_CATEGORY", "GISCUS_DISCUSSION_CATEGORY_ID"]
     },
     "@iamhoonse-js/react-utils#build": {
       "dependsOn": ["@iamhoonse-js/browser-utils#build"]
