ci: publish-github-pages.yml 워크플로우에서 빌드 단계에 주입되는 환경변수 GISCUS_REPO_ID 에 다른 값이 들어가는 문제 수정

--- a/.github/workflows/publish-github-pages.yml
+++ b/.github/workflows/publish-github-pages.yml
@@ -83,7 +83,7 @@ jobs:
         run: pnpm run build --filter=docs
         env:
           GISCUS_REPO: ${{ github.repository }}
-          GISCUS_REPO_ID: ${{ github.repository_id }}
+          GISCUS_REPO_ID: ${{ secrets.GISCUS_REPO_ID }}
           GISCUS_DISCUSSION_CATEGORY: ${{ vars.GISCUS_DISCUSSION_CATEGORY }}
           GISCUS_DISCUSSION_CATEGORY_ID: ${{ secrets.GISCUS_DISCUSSION_CATEGORY_ID }}
 
